--- a/Businessmall.Application.Infrastracture/Businessmall.Application.Infrastracture.csproj
+++ b/Businessmall.Application.Infrastracture/Businessmall.Application.Infrastracture.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C0A4BB1F-6D85-4D32-A233-D104D0E6BCD7}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{99DD39D1-CB7F-4459-8B26-F43C22EE4771}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Businessmall.Application</RootNamespace>
-    <AssemblyName>Businessmall.Application</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <RootNamespace>Businessmall.Application.Infrastracture</RootNamespace>
+    <AssemblyName>Businessmall.Application.Infrastracture</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
@@ -34,39 +33,40 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
-  <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CommandHandlers\" />
-    <Folder Include="Commands\ShopUsers\" />
-    <Folder Include="Event Handler\" />
-    <Folder Include="Event\" />
-    <Folder Include="SQLQueries\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Queries\ShopUser\UserLogin.cs" />
-    <Compile Include="QueryHandlers\UserLogInQueryHandler.cs" />
-  </ItemGroup>
   <ItemGroup>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.2.2.0\lib\net40\Ninject.dll</HintPath>
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Businessmall.Application.Infrastracture\Businessmall.Application.Infrastracture.csproj">
-      <Project>{99dd39d1-cb7f-4459-8b26-f43c22ee4771}</Project>
-      <Name>Businessmall.Application.Infrastracture</Name>
-    </ProjectReference>
+    <Compile Include="Constants\ApplicationConfiguration.cs" />
+    <Compile Include="Contracts\ICommand.cs" />
+    <Compile Include="Contracts\ICommandDispatcher.cs" />
+    <Compile Include="Contracts\ICommandHandler.cs" />
+    <Compile Include="Contracts\IDataContext.cs" />
+    <Compile Include="Contracts\IQuery.cs" />
+    <Compile Include="Contracts\IQueryDispatcher.cs" />
+    <Compile Include="Contracts\IQueryHandler.cs" />
+    <Compile Include="Contracts\IQueryResult.cs" />
+    <Compile Include="Data\DataContext.cs" />
+    <Compile Include="Dispatchers\CommandDispatcher.cs" />
+    <Compile Include="Dispatchers\QueryDispatcher.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
