--- a/Businessmall.Application.Infrastracture/Businessmall.Application.Infrastracture.csproj
+++ b/Businessmall.Application.Infrastracture/Businessmall.Application.Infrastracture.csproj
@@ -41,11 +41,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Dapper.1.50.2\lib\net40\Dapper.dll</HintPath>
+      <HintPath>..\packages\Dapper.1.50.2\lib\net45\Dapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.2.0.0\lib\net45-full\Ninject.dll</HintPath>
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -61,7 +61,7 @@
     <Compile Include="Configurations\ApplicationConfigurationCollection.cs" />
     <Compile Include="Configurations\ApplicationConfigurationHandler.cs" />
     <Compile Include="Configurations\ApplicationSetting.cs" />
-    <Compile Include="Constants\ApplicationConfiguration.cs" />
+    <Compile Include="Configurations\ApplicationConfiguration.cs" />
     <Compile Include="Contracts\IApplicationHelper.cs" />
     <Compile Include="Contracts\ICommand.cs" />
     <Compile Include="Contracts\ICommandDispatcher.cs" />
@@ -71,10 +71,14 @@
     <Compile Include="Contracts\IQueryDispatcher.cs" />
     <Compile Include="Contracts\IQueryHandler.cs" />
     <Compile Include="Contracts\IQueryResult.cs" />
+    <Compile Include="Contracts\ISelectList.cs" />
     <Compile Include="Data\DataContext.cs" />
     <Compile Include="Dispatchers\CommandDispatcher.cs" />
     <Compile Include="Dispatchers\QueryDispatcher.cs" />
     <Compile Include="Helpers\ApplicationHelper.cs" />
+    <Compile Include="Helpers\Encryptor.cs" />
+    <Compile Include="Helpers\ResourceHelper.cs" />
+    <Compile Include="Helpers\SelectList.cs" />
     <Compile Include="Helpers\StringHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -82,6 +86,9 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Constants\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
