--- a/Businessmall.Application/Businessmall.Application.csproj
+++ b/Businessmall.Application/Businessmall.Application.csproj
@@ -48,14 +48,18 @@
   <ItemGroup>
     <Folder Include="Event Handler\" />
     <Folder Include="Event\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandHandlers\LoginShopUserCommandHandler.cs" />
     <Compile Include="Commands\AddOrderForUserCommand.cs" />
     <Compile Include="Commands\LoginShopUserCommand.cs" />
     <Compile Include="Queries\Product\GetAvailableProductsQuery.cs" />
-    <Compile Include="Queries\ShopUser\UserLogin.cs" />
-    <Compile Include="QueryHandlers\UserLogInQueryHandler.cs" />
+    <Compile Include="Queries\ShopUser\UserLoginQuery.cs" />
+    <Compile Include="QueryHandlers\Products\GetAvailableProductsQueryHandler.cs" />
+    <Compile Include="QueryHandlers\ShopUsers\UserLogInQueryHandler.cs" />
+    <Compile Include="QueryResults\Products\AvailableProduct.cs" />
+    <Compile Include="QueryResults\ShopUsers\LoggedInUser.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Shuttle.Core.Infrastructure, Version=4.2.3.0, Culture=neutral, processorArchitecture=MSIL">
@@ -72,10 +76,20 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Businessmall.Application.Infrastracture\Businessmall.Application.Infrastracture.csproj">
+      <Project>{99dd39d1-cb7f-4459-8b26-f43c22ee4771}</Project>
+      <Name>Businessmall.Application.Infrastracture</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Businessmall\Businessmall.csproj">
       <Project>{ce3381a3-7984-44d0-b9d6-9ff9fea81cb9}</Project>
       <Name>Businessmall</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SqlQueries\UserLoginQuery.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SqlQueries\GetAvailableProducts.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
