--- a/Shop/Web.config
+++ b/Shop/Web.config
@@ -8,6 +8,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="serviceBus" type="Shuttle.Esb.ServiceBusSection, Shuttle.Esb" />
+    <section name="webshop-setting" type="Businessmall.Application.Infrastracture.Configurations.ApplicationConfigurationHandler, Businessmall.Application.Infrastracture" />
   </configSections>
   
   <serviceBus>
@@ -67,13 +68,32 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="BusinessmallShopContainer" connectionString="metadata=res://*/BusinessmallShop.csdl|res://*/BusinessmallShop.ssdl|res://*/BusinessmallShop.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NB-BAEL-PH\MSSQL2014;initial catalog=esb.shop;user id=adminbm;password=admin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!-- VM-HPASCUA-PH -->
+    <add name="webshop_local" connectionString="Data Source=NB-RONATAY-PH\MSSQL2K8;Initial Catalog=esb.businessmall;Integrated Security=true; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+    <add name="VartaHotelierSystem_hpascua" connectionString="Data Source=VM-HPASCUA-PH\MSSQL2014;Initial Catalog=varta_guide_system_stage;Integrated Security=true; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+    <!-- STAGE -->
+    <add name="VartaHotelier_Stage" connectionString="Data Source=DBDEV;Initial Catalog=varta_guide_main_stage;User ID=app_varta_guide_stage;Password=jFRp8EI4NSNTcJq2mqGW; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+    <add name="VartaHotelierSystem_Stage" connectionString="Data Source=DBDEV;Initial Catalog=varta_guide_system_stage;User ID=app_varta_guide_stage;Password=jFRp8EI4NSNTcJq2mqGW; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+    <!-- LIVE -->
+    <add name="VartaHotelier_Live" connectionString="Data Source=dblive;Initial Catalog=varta_guide_main_live;User ID=app_varta_guide_live;Password=rfMnKy0KWJGT6gCYdGr7; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+    <add name="VartaHotelierSystem_Live" connectionString="Data Source=dblive;Initial Catalog=varta_guide_system_live;User ID=app_varta_guide_live;Password=rfMnKy0KWJGT6gCYdGr7; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <webshop-setting activeEnvironment="local">
+    <environments>
+      <add environment="local" databaseConnectionName="webshop_local" />
+      <add environment="Stage" databaseConnectionName="VartaHotelier_Stage" />
+      <add environment="Live" databaseConnectionName="VartaHotelier_Live" />
+    </environments>
+  </webshop-setting>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
