--- a/Businessmall.Shop.Infrastructure/Businessmall.Application.csproj
+++ b/Businessmall.Shop.Infrastructure/Businessmall.Application.csproj
@@ -4,16 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{99DD39D1-CB7F-4459-8B26-F43C22EE4771}</ProjectGuid>
+    <ProjectGuid>{F40D4FDB-7D16-4B70-9B97-9DEBCD0FDCE3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Businessmall.Application.Infrastracture</RootNamespace>
-    <AssemblyName>Businessmall.Application.Infrastracture</AssemblyName>
+    <RootNamespace>Businessmall.Application</RootNamespace>
+    <AssemblyName>Businessmall.Application</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -40,56 +40,54 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Dapper.1.50.2\lib\net45\Dapper.dll</HintPath>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Commands\ShopUsers\" />
+    <Folder Include="Event Handler\" />
+    <Folder Include="Event\" />
+    <Folder Include="SQLQueries\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="CommandHandlers\LoginShopUserCommandHandler.cs" />
+    <Compile Include="Commands\AddOrderForUserCommand.cs" />
+    <Compile Include="Commands\LoginShopUserCommand.cs" />
+    <Compile Include="Queries\Product\GetAvailableProductsQuery.cs" />
+    <Compile Include="Queries\ShopUser\UserLogin.cs" />
+    <Compile Include="QueryHandlers\UserLogInQueryHandler.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Shuttle.Core.Infrastructure, Version=4.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Shuttle.Core.Infrastructure.4.2.3\lib\net40-full\Shuttle.Core.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net40\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Shuttle.Esb, Version=7.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Shuttle.Esb.7.0.4\lib\net40-full\Shuttle.Esb.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configurations\ApplicationConfigurationCollection.cs" />
-    <Compile Include="Configurations\ApplicationConfigurationHandler.cs" />
-    <Compile Include="Configurations\ApplicationSetting.cs" />
-    <Compile Include="Configurations\ApplicationConfiguration.cs" />
-    <Compile Include="Contracts\IApplicationHelper.cs" />
-    <Compile Include="Contracts\ICommand.cs" />
-    <Compile Include="Contracts\ICommandDispatcher.cs" />
-    <Compile Include="Contracts\ICommandHandler.cs" />
-    <Compile Include="Contracts\IDataContext.cs" />
-    <Compile Include="Contracts\IEvent.cs" />
-    <Compile Include="Contracts\IQuery.cs" />
-    <Compile Include="Contracts\IQueryDispatcher.cs" />
-    <Compile Include="Contracts\IQueryHandler.cs" />
-    <Compile Include="Contracts\IQueryResult.cs" />
-    <Compile Include="Contracts\ISelectList.cs" />
-    <Compile Include="Data\DataContext.cs" />
-    <Compile Include="Dispatchers\CommandDispatcher.cs" />
-    <Compile Include="Dispatchers\QueryDispatcher.cs" />
-    <Compile Include="Helpers\ApplicationHelper.cs" />
-    <Compile Include="Helpers\Encryptor.cs" />
-    <Compile Include="Helpers\ResourceHelper.cs" />
-    <Compile Include="Helpers\SelectList.cs" />
-    <Compile Include="Helpers\StringHelpers.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <ProjectReference Include="..\Businessmall\Businessmall.csproj">
+      <Project>{ce3381a3-7984-44d0-b9d6-9ff9fea81cb9}</Project>
+      <Name>Businessmall</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Constants\" />
+    <ProjectReference Include="..\Businessmall.Application.Infrastracture\Businessmall.Application.Infrastracture.csproj">
+      <Project>{99dd39d1-cb7f-4459-8b26-f43c22ee4771}</Project>
+      <Name>Businessmall.Application.Infrastracture</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
