--- a/Shop/Web.config
+++ b/Shop/Web.config
@@ -10,15 +10,17 @@
     <section name="serviceBus" type="Shuttle.Esb.ServiceBusSection, Shuttle.Esb" />
     <section name="webshop-setting" type="Businessmall.Application.Infrastracture.Configurations.ApplicationConfigurationHandler, Businessmall.Application.Infrastracture" />
   </configSections>
-  
+
   <serviceBus>
     <messageRoutes>
-      <messageRoute uri="msmq://./shuttle-server-work">
-        <add specification="StartsWith" value="Businessmall.Application.Commands" />
+      <messageRoute uri="sql://ShuttleQueue/table-queue-server">
+        <add specification="StartsWith" value="Businessmall.Application" />
       </messageRoute>
     </messageRoutes>
 
-    <inbox workQueueUri="msmq://./shuttle-client-work" errorQueueUri="msmq://./shuttle-error" />
+    <inbox 
+      workQueueUri="sql://ShuttleQueue/table-queue-client" 
+      errorQueueUri="sql://ShuttleQueue/table-queue-error" />
   </serviceBus>
 
   <appSettings>
@@ -28,6 +30,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5">
@@ -46,6 +49,7 @@
       </namespaces>
     </pages>
   </system.web>
+  
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
@@ -57,6 +61,7 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -67,16 +72,17 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
   <connectionStrings>
-    <!-- VM-HPASCUA-PH -->
-    <add name="webshop_local" connectionString="Data Source=NB-RONATAY-PH\MSSQL2K8;Initial Catalog=esb.businessmall;Integrated Security=true; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
-    <add name="VartaHotelierSystem_hpascua" connectionString="Data Source=VM-HPASCUA-PH\MSSQL2014;Initial Catalog=varta_guide_system_stage;Integrated Security=true; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+    <!-- LOCAL -->
+    <add name="webshop_local" connectionString="Data Source=NB-BAEL-PH\MSSQL2014;Initial Catalog=esb.shop;User ID=adminbm;Password=admin" providerName="System.Data.SqlClient" />
+    <add name="ShuttleQueue" connectionString="Data Source=NB-BAEL-PH\MSSQL2014;Initial Catalog=esb.shop;User ID=adminbm;Password=admin" providerName="System.Data.SqlClient" />
     <!-- STAGE -->
-    <add name="VartaHotelier_Stage" connectionString="Data Source=DBDEV;Initial Catalog=varta_guide_main_stage;User ID=app_varta_guide_stage;Password=jFRp8EI4NSNTcJq2mqGW; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
-    <add name="VartaHotelierSystem_Stage" connectionString="Data Source=DBDEV;Initial Catalog=varta_guide_system_stage;User ID=app_varta_guide_stage;Password=jFRp8EI4NSNTcJq2mqGW; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+    <add name="VartaHotelier_Stage" connectionString="Data Source=DBDEV;Initial Catalog=varta_guide_main_stage;User ID=app_varta_guide_stage;Password=jFRp8EI4NSNTcJq2mqGW; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="VartaHotelierSystem_Stage" connectionString="Data Source=DBDEV;Initial Catalog=varta_guide_system_stage;User ID=app_varta_guide_stage;Password=jFRp8EI4NSNTcJq2mqGW; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
     <!-- LIVE -->
-    <add name="VartaHotelier_Live" connectionString="Data Source=dblive;Initial Catalog=varta_guide_main_live;User ID=app_varta_guide_live;Password=rfMnKy0KWJGT6gCYdGr7; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
-    <add name="VartaHotelierSystem_Live" connectionString="Data Source=dblive;Initial Catalog=varta_guide_system_live;User ID=app_varta_guide_live;Password=rfMnKy0KWJGT6gCYdGr7; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+    <add name="VartaHotelier_Live" connectionString="Data Source=dblive;Initial Catalog=varta_guide_main_live;User ID=app_varta_guide_live;Password=rfMnKy0KWJGT6gCYdGr7; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="VartaHotelierSystem_Live" connectionString="Data Source=dblive;Initial Catalog=varta_guide_system_live;User ID=app_varta_guide_live;Password=rfMnKy0KWJGT6gCYdGr7; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <webshop-setting activeEnvironment="local">
     <environments>
