--- a/Businessmall.ServiceBus.Shop.Order/Businessmall.ServiceBus.Shop.Order.csproj
+++ b/Businessmall.ServiceBus.Shop.Order/Businessmall.ServiceBus.Shop.Order.csproj
@@ -55,7 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EventHandlers\OrderSavedEvent.cs" />
+    <Compile Include="EventHandlers\OrderSavedEventHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -63,7 +63,16 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Businessmall.Application.Infrastracture\Businessmall.Application.Infrastracture.csproj">
+      <Project>{99dd39d1-cb7f-4459-8b26-f43c22ee4771}</Project>
+      <Name>Businessmall.Application.Infrastracture</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Businessmall.Application\Businessmall.Application.csproj">
+      <Project>{c0a4bb1f-6d85-4d32-a233-d104d0e6bcd7}</Project>
+      <Name>Businessmall.Application</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
