--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,8 @@
 <repositories>
   <repository path="..\Businessmall.Application.Infrastracture\packages.config" />
   <repository path="..\Businessmall.Application\packages.config" />
+  <repository path="..\Businessmall.ServiceBus.Backoffice.Order\packages.config" />
+  <repository path="..\Businessmall.ServiceBus.Shop.Order\packages.config" />
   <repository path="..\Businessmall.Shop.Infrastructure\packages.config" />
   <repository path="..\Businessmall\packages.config" />
   <repository path="..\Shop\packages.config" />
