Updated product list view

--- a/Shop/Web.config
+++ b/Shop/Web.config
@@ -75,7 +75,7 @@
   
   <connectionStrings>
     <!-- LOCAL -->
-    <add name="webshop_local" connectionString="Data Source=NB-BAEL-PH\MSSQL2014;Initial Catalog=esb.shop;User ID=adminbm;Password=admin" providerName="System.Data.SqlClient" />
+    <add name="webshop_local" connectionString="Data Source=NB-BAEL-PH\MSSQL2014;Initial Catalog=esb.businessmall;User ID=adminbm;Password=admin" providerName="System.Data.SqlClient" />
     <add name="ShuttleQueue" connectionString="Data Source=NB-BAEL-PH\MSSQL2014;Initial Catalog=esb.shop;User ID=adminbm;Password=admin" providerName="System.Data.SqlClient" />
     <!-- STAGE -->
     <add name="VartaHotelier_Stage" connectionString="Data Source=DBDEV;Initial Catalog=varta_guide_main_stage;User ID=app_varta_guide_stage;Password=jFRp8EI4NSNTcJq2mqGW; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
