--- a/Businessmall.Application/Businessmall.Application.csproj
+++ b/Businessmall.Application/Businessmall.Application.csproj
@@ -46,23 +46,27 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="CommandHandlers\" />
     <Folder Include="Event Handler\" />
-    <Folder Include="Services\" />
+    <Folder Include="SqlQueries\Services\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandHandlers\CheckoutOrderCommandHandlerWithReturn.cs" />
+    <Compile Include="CommandResults\InsertShopOrderCommandResult.cs" />
     <Compile Include="Commands\Order\AddOrderForUserCommand.cs" />
     <Compile Include="Commands\Order\LoginShopUserCommand.cs" />
-    <Compile Include="Commands\Order\PlaceOrderCommand.cs" />
+    <Compile Include="Commands\Order\CheckoutOrderCommand.cs" />
     <Compile Include="Commands\Order\SaveOrderCommand.cs" />
     <Compile Include="Commands\Order\UpdateOrderConfirmationCommand.cs" />
     <Compile Include="Events\OrderPlacedEvent.cs" />
     <Compile Include="Events\OrderSavedEvent.cs" />
     <Compile Include="Queries\Product\GetAvailableProductsQuery.cs" />
+    <Compile Include="Queries\Product\GetOrderCheckoutDetailsQuery.cs" />
     <Compile Include="Queries\ShopUser\UserLoginQuery.cs" />
     <Compile Include="QueryHandlers\Products\GetAvailableProductsQueryHandler.cs" />
+    <Compile Include="QueryHandlers\Products\GetOrderCheckoutDetailsQueryHandler.cs" />
     <Compile Include="QueryHandlers\ShopUsers\UserLogInQueryHandler.cs" />
     <Compile Include="QueryResults\Products\AvailableProduct.cs" />
+    <Compile Include="QueryResults\Products\CheckoutProduct.cs" />
     <Compile Include="QueryResults\ShopUsers\LoggedInUser.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -94,6 +98,15 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SqlQueries\GetAvailableProducts.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SqlQueries\GetOrderCheckoutDetailsQuery.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SqlQueries\CheckoutShopOrderQuery.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SqlQueries\InsertShopOrderToBackoffice.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
