--- a/Businessmall.ServiceBus.Backoffice.Order/App.config
+++ b/Businessmall.ServiceBus.Backoffice.Order/App.config
@@ -15,6 +15,7 @@
 
     <connectionStrings>
       <add name="ShuttleQueue" connectionString="Data Source=NB-BAEL-PH\MSSQL2014;Initial Catalog=esb.shop;User ID=adminbm;Password=admin" providerName="System.Data.SqlClient" />
+      <add name="Subscription" connectionString="Data Source=NB-BAEL-PH\MSSQL2014;Initial Catalog=esb.shop;User ID=adminbm;Password=admin" providerName="System.Data.SqlClient" />
       <add name="BusinessmallEntities" connectionString="metadata=res://*/Businessmall.csdl|res://*/Businessmall.ssdl|res://*/Businessmall.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NB-BAEL-PH\MSSQL2014;initial catalog=esb.businessmall;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     </connectionStrings>
   
