--- a/Businessmall.Application/Businessmall.Application.csproj
+++ b/Businessmall.Application/Businessmall.Application.csproj
@@ -51,11 +51,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandHandlers\CheckoutOrderCommandHandlerWithResult.cs" />
-    <Compile Include="CommandResults\InsertShopOrderCommandResult.cs" />
+    <Compile Include="CommandResults\CheckoutShopOrderCommandResult.cs" />
+    <Compile Include="CommandResults\SaveBackofficeOrderCommandResult.cs" />
     <Compile Include="Commands\Order\AddOrderForUserCommand.cs" />
-    <Compile Include="Commands\Order\LoginShopUserCommand.cs" />
+    <Compile Include="Commands\LoginShopUserCommand.cs" />
     <Compile Include="Commands\Order\CheckoutOrderCommand.cs" />
-    <Compile Include="Commands\Order\SaveOrderCommand.cs" />
     <Compile Include="Commands\Order\UpdateOrderConfirmationCommand.cs" />
     <Compile Include="Events\OrderPlacedEvent.cs" />
     <Compile Include="Events\OrderSavedEvent.cs" />
@@ -68,6 +68,7 @@
     <Compile Include="QueryResults\Products\AvailableProduct.cs" />
     <Compile Include="QueryResults\Products\CheckoutProduct.cs" />
     <Compile Include="QueryResults\ShopUsers\LoggedInUser.cs" />
+    <Resource Include="SqlQueries\SaveOrderCommandQuery.sql" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Shuttle.Core.Infrastructure, Version=4.2.3.0, Culture=neutral, processorArchitecture=MSIL">
@@ -104,9 +105,6 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SqlQueries\CheckoutShopOrderQuery.sql" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="SqlQueries\InsertShopOrderToBackoffice.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
