--- a/Businessmall.ServiceBus.Subscriber.Order/Businessmall.ServiceBus.Subscriber.Order.csproj
+++ b/Businessmall.ServiceBus.Subscriber.Order/Businessmall.ServiceBus.Subscriber.Order.csproj
@@ -82,14 +82,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandHandlers\SaveOrderCommandHandler.cs" />
+    <Compile Include="CommandHandlers\UpdateOrderConfirmationCommandHandler.cs" />
+    <Compile Include="Commands\SaveOrderCommand.cs" />
+    <Compile Include="Commands\UpdateOrderConfirmationCommand.cs" />
     <Compile Include="Host.cs" />
-    <Compile Include="OrderPlacedEventHandler.cs" />
-    <Compile Include="OrderSavedEventHandler.cs" />
+    <Compile Include="EventHandlers\OrderPlacedEventHandler.cs" />
+    <Compile Include="EventHandlers\OrderSavedEventHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Queries\GetProductDetailsQuery.cs" />
+    <Compile Include="QueryHandlers\GetProductDetailsQueryHandler.cs" />
+    <Compile Include="QueryResults\ProductDetails.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Businessmall.Application.Infrastracture\Businessmall.Application.Infrastracture.csproj">
@@ -104,6 +120,7 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
