Updated inventory after saving order in backoffice Updated sql queries due to table update Added order_status in shop Added error handling in shop Login Added order list in backoffice

--- a/Businessmall.ServiceBus.Subscriber.Order/Businessmall.ServiceBus.Subscriber.Order.csproj
+++ b/Businessmall.ServiceBus.Subscriber.Order/Businessmall.ServiceBus.Subscriber.Order.csproj
@@ -84,8 +84,10 @@
   <ItemGroup>
     <Compile Include="CommandHandlers\SaveOrderCommandHandler.cs" />
     <Compile Include="CommandHandlers\UpdateOrderConfirmationCommandHandler.cs" />
+    <Compile Include="CommandHandlers\UpdatePurchasedQtyCommandHandler.cs" />
     <Compile Include="Commands\SaveOrderCommand.cs" />
     <Compile Include="Commands\UpdateOrderConfirmationCommand.cs" />
+    <Compile Include="Commands\UpdatePurchasedQtyCommand.cs" />
     <Compile Include="Host.cs" />
     <Compile Include="EventHandlers\OrderPlacedEventHandler.cs" />
     <Compile Include="EventHandlers\OrderSavedEventHandler.cs" />
