--- a/Businessmall.Application.Infrastracture/Businessmall.Application.Infrastracture.csproj
+++ b/Businessmall.Application.Infrastracture/Businessmall.Application.Infrastracture.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Configurations\ApplicationConfigurationHandler.cs" />
     <Compile Include="Configurations\ApplicationSetting.cs" />
     <Compile Include="Configurations\ApplicationConfiguration.cs" />
+    <Compile Include="Constants\OrderStatusEnum.cs" />
     <Compile Include="Contracts\IApplicationHelper.cs" />
     <Compile Include="Contracts\ICommand.cs" />
     <Compile Include="Contracts\ICommandDispatcher.cs" />
@@ -89,9 +90,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Constants\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
